--- a/public/templates/contact.twig
+++ b/public/templates/contact.twig
@@ -107,9 +107,7 @@
     </div>
   </div>
 
-  <footer class="text-center mt-5 p-3" style="background: rgba(0,0,0,0.5);">
-    <p>&copy; 2025 Fungi. Todos los derechos reservados.</p>
-  </footer>
+{% include 'footer.twig' %}
 
   <!-- jQuery y Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
