--- a/public/templates/view_toggle.twig
+++ b/public/templates/view_toggle.twig
@@ -3,3 +3,4 @@
   <button id="gridViewBtn" class="btn btn-outline-light mb-2">Grid</button>
   <button id="listViewBtn" class="btn btn-outline-light">Lista</button>
 </div>
+<link rel="stylesheet" href="/assets/css/view_toggle.css">
