--- a/public/templates/header.twig
+++ b/public/templates/header.twig
@@ -1,15 +1,35 @@
 {# public/templates/header.twig #}
-<nav class="navbar navbar-expand-lg" style="background: rgba(0, 0, 0, 0.7);">
+<style>
+.navbar {
+  background: rgba(0, 0, 0, 0.7);
+}
+
+.navbar-brand {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 900;
+  color: #fff;
+}
+
+.navbar-nav {
+  font-family: 'Montserrat', sans-serif;
+}
+
+.nav-link {
+  color: #fff;
+}
+</style>
+
+<nav class="navbar navbar-expand-lg">
   <div class="container">
-    <a class="navbar-brand" href="/" style="font-family: 'Montserrat', sans-serif; font-weight: 900; color: #fff;">
+    <a class="navbar-brand" href="/">
       Fungi Prime
     </a>
     <div class="collapse navbar-collapse">
-      <ul class="navbar-nav ml-auto" style="font-family: 'Montserrat', sans-serif;">
-        <li class="nav-item"><a class="nav-link" href="/index" style="color: #fff;">Inicio</a></li>
-        <li class="nav-item"><a class="nav-link" href="/fungi_list" style="color: #fff;">Listado</a></li>
-        <li class="nav-item"><a class="nav-link" href="/about" style="color: #fff;">Acerca de</a></li>
-        <li class="nav-item"><a class="nav-link" href="/contact" style="color: #fff;">Contacto</a></li>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item"><a class="nav-link" href="/index">Inicio</a></li>
+        <li class="nav-item"><a class="nav-link" href="/fungi_list">Listado</a></li>
+        <li class="nav-item"><a class="nav-link" href="/about">Acerca de</a></li>
+        <li class="nav-item"><a class="nav-link" href="/contact">Contacto</a></li>
       </ul>
     </div>
   </div>
